--- a/Ecommerce/test-output/old/Default suite/classes.html
+++ b/Ecommerce/test-output/old/Default suite/classes.html
@@ -4,21 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>scripts.Login</td>
+<td>testCases.TC001_AccountRegister</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>f</td>
+<td>verify_Registration</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeClass</td>
+<td>setup</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -31,6 +31,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterClass</td>
+<td>tearDown</td>
 <td>&nbsp;</td></tr>
 </table>
